switch user test

--- a/create-page.html
+++ b/create-page.html
@@ -1,4 +1,5 @@
 <!--access-token required-->
+<!--https://api.telegra.ph/createPage?access_token=b968da509bb76866c35425099bc0989a5ec3b32997d55286c657e6994bbb&title=Sample+Page&author_name=Anonymous&content=[{"tag":"p","children":["Hello,+world!"]}]&return_content=true-->
 <form action="">
 	<input type="text" name="token" placeholder="token" title="Required. Access token of the Telegraph account." required>
     <input type="text" name="title" placeholder="title" title="Required. Page title." required>	
@@ -10,18 +11,4 @@
     <input type="checkbox" title="Return content">
 	<button>Send</button>
 </form>
-<script>
-
-var token = "";
-var author_name ="";
-var author_url = "";
-var return_content = true;
-var content=[[{"tag":"p","children":["Hello,+world!"]}]
-
-/*
-https://api.telegra.ph/createPage?
-access_token=b968da509bb76866c35425099bc0989a5ec3b32997d55286c657e6994bbb&
-title=Sample+Page&author_name=Anonymous&content=[{"tag":"p","children":["Hello,+world!"]}]&return_content=true
-*/
-
-</script>
+<script></script>
