editPage method HTMLed

--- a/edit-page.html
+++ b/edit-page.html
@@ -1,1 +1,15 @@
+
 <h3>Edit page</h3>
+<!--https://api.telegra.ph/editPage/Sample-Page-12-15?access_token=b968da509bb76866c35425099bc0989a5ec3b32997d55286c657e6994bbb&title=Sample+Page&author_name=Anonymous&content=[{"tag":"p","children":["Hello,+world!"]}]&return_content=true-->
+<form action="">
+    <legend>Use this method to edit an existing Telegraph page. On success, returns a Page object.</legend>
+    <input type="text" placeholder="access_token" title="Required. Access token of the Telegraph account." required>
+    <input type="text" name="path" title="Required. Path to the page." required="">
+    <input type="text" name="title" placeholder="title" title="Required. Page title." required maxlength="256">
+    <input type="text" name="content" placeholder="content" title="Required. Content of the page." required>
+    <!--http://telegra.ph/api#Content-format-->
+    <input type="text" name="author_name" placeholder="Author name" title="Author name, displayed below the article's title." maxlength="128">
+    <input type="text" name="author_url" placeholder="Profile link" title="Profile link, opened when users click on the author's name below the title. Can be any link, not necessarily to a Telegram profile or channel." maxlength="512">
+    <input type="text" type="checkbox" title="If true, a content field will be returned in the Page object." value="false">
+    <button>Edit page</button>
+</form>
