--- a/index.html
+++ b/index.html
@@ -4,43 +4,42 @@
 <head>
     <meta charset="UTF-8">
 
-    <title>Telegraph Create User</title>
+    <title>Telegram terminal</title>
 
     <link rel="stylesheet" href="">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <!--JQuery-->
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <!--angular-->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
+    
 </head>
 
 <body>
     <div class="container jumbotron">
         <form action="https://api.telegra.ph/createAccount">
             <legend>Create User</legend>
-
             <div class="form-group">
                 <label for="short_name">Username</label>
                 <input name="short_name" type="text" placeholder="Username" class="form-control" title="Required. Account name, helps users with several accounts remember which they are currently using. Displayed to the user above the Edit/Publish button on Telegra.ph, other users don't see this name." id="short_name" minlength="1" maxlength="32" required>
             </div>
-
             <div class="form-group">
                 <label for="author_name">Author name</label>
                 <input type="text" data-toggle="tooltip" data-placement="top" class="form-control" id="author_name" placeholder="Default author name" title="Displayed to the user above the Edit/Publish button on Telegra.ph, other users don't see this name.">
             </div>
-
             <div class="form-group">
                 <label for="author_url">Author's url (any link)</label>
                 <input class="form-control" type="text" name="author_url" placeholder="http://vk.com" title="Default profile link, opened when users click on the author's name below the title. Can be any link, not necessarily to a Telegram profile or channel." id="author_url" maxlength="512">
             </div>
-
             <button type="submit" class="btn btn-default">Create</button>
-
         </form>
     </div>
     <!--?short_name=Sandbox&author_name=Anonymous-->
-
 </body>
 
 </html>
