small bugs fixes

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         <form role="form" class="form-horizontal" action="https://api.telegra.ph/editAccountInfo">
             <fieldset>
                 <legend>Edit User</legend>
+                {{token}}
                 <div class="form-group">
                     <label for="short_name" class="col-sm-3 control-label">Username</label>
                     <div class="col-sm-9">
