--- a/index.html
+++ b/index.html
@@ -9,128 +9,125 @@
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css" crossorigin="anonymous">
     <!--Custom css
     <link rel="stylesheet" href="">-->
-    <!--angular-->
+    <!--Angular-->
     <script src="bower_components/angular/angular.min.js"></script>
+    <!--Controllers-->
+    <script src="app/controllers/createUserController.js"></script>
     <!--App scripts-->
     <script src="app/TerminalApp.js"></script>
 </head>
 
 <body ng-controller="MainController">
-    <div ng-show="createUserFormIsShown" class="container jumbotron create-user">
-        <!--action="https://api.telegra.ph/createAccount"-->
-        <form role="form" class="form-horizontal" ng-submit="createUser();">
-            <fieldset>
-                <legend>Create User</legend>
-                <div class="form-group">
-                    <label for="short_name" class="col-sm-3 control-label">Username</label>
-                    <div class="col-sm-9">                        
-                        <input name="short_name" 
-                                ng-model="createUserData.short_name"
-                                type="text" 
-                                placeholder="Username" 
-                                class="form-control" 
-                                title="Required. Account name, helps users with several accounts remember which they are currently using. Displayed to the user above the Edit/Publish button on Telegra.ph, other users don't see this name." 
-                                id="short_name" 
-                                minlength="1" 
-                                maxlength="32" 
-                                required>
-                    </div>
+<div ng-show="createUserFormIsShown" class="container jumbotron create-user">
+    <!--action="https://api.telegra.ph/createAccount"-->
+    <form role="form" class="form-horizontal" ng-submit="createUser()">
+        <fieldset>
+            <legend>Create User</legend>
+            <div class="form-group">
+                <label for="short_name" class="col-sm-3 control-label">Username</label>
+                <div class="col-sm-9">
+                    <input name="short_name"
+                           ng-model="createUserData.short_name"
+                           type="text"
+                           placeholder="Username"
+                           class="form-control"
+                           title="Required. Account name, helps users with several accounts remember which they are currently using. Displayed to the user above the Edit/Publish button on Telegra.ph, other users don't see this name."
+                           id="short_name"
+                           minlength="1"
+                           maxlength="32"
+                           required>
                 </div>
+            </div>
 
-                <div class="form-group">
-                    <label for="author_name" class="col-sm-3 control-label">Author name</label>
-                    <div class="col-sm-9">
-                        <input type="text" 
-                            ng-model="createUserData.author_name"
-                            data-toggle="tooltip" 
-                            data-placement="top" 
-                            class="form-control col-sm-9" 
-                            id="author_name" 
-                            placeholder="Default author name" 
-                            title="Displayed to the user above the Edit/Publish button on Telegra.ph, other users don't see this name.">
-                    </div>
+            <div class="form-group">
+                <label for="author_name" class="col-sm-3 control-label">Author name</label>
+                <div class="col-sm-9">
+                    <input type="text"
+                           ng-model="createUserData.author_name"
+                           data-toggle="tooltip"
+                           data-placement="top"
+                           class="form-control col-sm-9"
+                           id="author_name"
+                           placeholder="Default author name"
+                           title="Displayed to the user above the Edit/Publish button on Telegra.ph, other users don't see this name.">
                 </div>
-                <div class="form-group">
-                    <label for="author_url" class="col-sm-3 control-label">Author's url (any link)</label>
-                    <div class="col-sm-9">
-                        <input class="form-control col-sm-9"
-                                ng-model="createUserData.author_url" 
-                                type="text" 
-                                name="author_url" 
-                                placeholder="http://vk.com" 
-                                title="Default profile link, opened when users click on the author's name below the title. Can be any link, not necessarily to a Telegram profile or channel." 
-                                id="author_url" 
-                                maxlength="512">
-                    </div>
+            </div>
+            <div class="form-group">
+                <label for="author_url" class="col-sm-3 control-label">Author's url (any link)</label>
+                <div class="col-sm-9">
+                    <input class="form-control col-sm-9"
+                           ng-model="createUserData.author_url"
+                           type="text"
+                           name="author_url"
+                           placeholder="http://vk.com"
+                           title="Default profile link, opened when users click on the author's name below the title. Can be any link, not necessarily to a Telegram profile or channel."
+                           id="author_url"
+                           maxlength="512">
                 </div>
-                <div class="col-sm-offset-3 col-sm-9">
-                    <button type="submit" class="btn btn-primary">Create</button>
-                </div>
-            </fieldset>
-        </form>
-        <!--?short_name=Sandbox&author_name=Anonymous-->
-        <pre>{{createUserData | json}}</pre>
+            </div>
+            <div class="col-sm-offset-3 col-sm-9">
+                <button type="submit" class="btn btn-primary">Create</button>
+            </div>
+        </fieldset>
+    </form>
+    <!--?short_name=Sandbox&author_name=Anonymous-->
+    <pre>{{createUserData | json}}</pre>
+    {{message}}
+
+</div>
 
 
-    </div>
+<!--<div ng-show="editUserFormIsShown" class="container jumbotron edit-user" ngController="editUserController">
+    https://api.telegra.ph/editAccountInfo?access_token=b968da509bb76866c35425099bc0989a5ec3b32997d55286c657e6994bbb&short_name=Sandbox&author_name=Anonymous-->
+<!-- <form role="form" class="form-horizontal" action="https://api.telegra.ph/editAccountInfo">
+     <fieldset>
+         <legend>Edit User</legend>
+         <div class="form-group">
+             <label for="short_name" class="col-sm-3 control-label">Username</label>
+             <div class="col-sm-9">
+                 <input
+                         type="text"
+                         placeholder="Username"
+                         class="form-control"
+                         title="Required. Account name, helps users with several accounts remember which they are currently using. Displayed to the user above the Edit/Publish button on Telegra.ph, other users don't see this name."
+                         id="short_name"
+                         minlength="1"
+                         maxlength="32"
+                         required>
+             </div>
+         </div>
+         <div class="form-group">
+             <label for="author_name" class="col-sm-3 control-label">Author name</label>
+             <div class="col-sm-9">
+                 <input type="text"
 
+                         data-toggle="tooltip"
+                         data-placement="top"
+                         class="form-control col-sm-9" id="author_name"
+                         placeholder="Default author name"
+                         title="Displayed to the user above the Edit/Publish button on Telegra.ph, other users don't see this name.">
+             </div>
+         </div>
+         <div class="form-group">
+             <label for="author_url" class="col-sm-3 control-label">Author's url (any link)</label>
+             <div class="col-sm-9">
+                 <input class="form-control col-sm-9"
 
-
-
-
-
-
-    <!--<div ng-show="editUserFormIsShown" class="container jumbotron edit-user" ngController="editUserController">
-        https://api.telegra.ph/editAccountInfo?access_token=b968da509bb76866c35425099bc0989a5ec3b32997d55286c657e6994bbb&short_name=Sandbox&author_name=Anonymous-->
-       <!-- <form role="form" class="form-horizontal" action="https://api.telegra.ph/editAccountInfo">
-            <fieldset>
-                <legend>Edit User</legend>
-                <div class="form-group">
-                    <label for="short_name" class="col-sm-3 control-label">Username</label>
-                    <div class="col-sm-9">
-                        <input 
-                                type="text" 
-                                placeholder="Username" 
-                                class="form-control" 
-                                title="Required. Account name, helps users with several accounts remember which they are currently using. Displayed to the user above the Edit/Publish button on Telegra.ph, other users don't see this name." 
-                                id="short_name" 
-                                minlength="1" 
-                                maxlength="32" 
-                                required>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="author_name" class="col-sm-3 control-label">Author name</label>
-                    <div class="col-sm-9">
-                        <input type="text"
-                                
-                                data-toggle="tooltip" 
-                                data-placement="top" 
-                                class="form-control col-sm-9" id="author_name"
-                                placeholder="Default author name" 
-                                title="Displayed to the user above the Edit/Publish button on Telegra.ph, other users don't see this name.">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="author_url" class="col-sm-3 control-label">Author's url (any link)</label>
-                    <div class="col-sm-9">
-                        <input class="form-control col-sm-9" 
-                                
-                                type="text" 
-                                name="author_url"
-                                placeholder="http://vk.com" 
-                                title="Default profile link, opened when users click on the author's name below the title. Can be any link, not necessarily to a Telegram profile or channel." 
-                                id="author_url" 
-                                maxlength="512">
-                    </div>
-                </div>
-                <div class="col-sm-offset-3 col-sm-9">
-                    <button type="submit" class="btn btn-primary">Edit</button>
-                </div>
-            </fieldset>
-        </form>-->
-        <!--?short_name=Sandbox&author_name=Anonymous
-    </div>-->
+                         type="text"
+                         name="author_url"
+                         placeholder="http://vk.com"
+                         title="Default profile link, opened when users click on the author's name below the title. Can be any link, not necessarily to a Telegram profile or channel."
+                         id="author_url"
+                         maxlength="512">
+             </div>
+         </div>
+         <div class="col-sm-offset-3 col-sm-9">
+             <button type="submit" class="btn btn-primary">Edit</button>
+         </div>
+     </fieldset>
+ </form>-->
+<!--?short_name=Sandbox&author_name=Anonymous
+</div>-->
 </body>
 
 </html>
