editAccount Info directive created

--- a/app/createAccount/createAccountTemplate.html
+++ b/app/createAccount/createAccountTemplate.html
@@ -54,6 +54,6 @@
     </form>
     <!--?short_name=Sandbox&author_name=Anonymous-->
     <pre>{{createAccountData | json}}</pre>
-    <pre>{{createAccountResponse | json}}</pre>
+    <pre>{{user | json}}</pre>
 
 </div>
