--- a/app/editAccountInfo/editAccountInfoTemplate.html
+++ b/app/editAccountInfo/editAccountInfoTemplate.html
@@ -48,8 +48,8 @@
                 </div>
             </div>
             <div class="col-sm-offset-3 col-sm-9">
-                <button type="submit" ng-show="!textEdit" class="btn btn-primary" ng-click="textEdit = true">Edit</button>
-                <button type="submit" ng-show="textEdit" class="btn btn-primary" ng-click="textEdit = false; getAccountInfo()">Save</button>
+                <button type="submit" ng-show="!textEdit" class="btn btn-primary" ng-click="textEdit = true; getAccountInfo()">Edit</button>
+                <button type="submit" ng-show="textEdit" class="btn btn-primary" ng-click="textEdit = false;">Save</button>
             </div>
         </fieldset>
     </form>
