--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <div ng-view></div>
 
 <nav class="navbar navbar-inverse navbar-fixed-bottom">
-    <div class="container-fluid">
+    <div class="container">
         <div class="navbar-header">
             <a class="navbar-brand" href="/">Terminal</a>
         </div>
