--- a/app/revokeAccessToken/revokeAccessTokenTemplate.html
+++ b/app/revokeAccessToken/revokeAccessTokenTemplate.html
@@ -1,7 +1,8 @@
-<div class="container">
-    <div ng-controller="revokeAccessTokenController">
-        <h3>Revoke access token</h3>
+<div class="container" ng-controller="revokeAccessTokenController">
+    <h3>Revoke access token</h3>
+    <form ng-submit="revokeAccessToken()">
         <input type="text" ng-model="accountInfo.access_token" class="form-control" disabled>
-        <button class="btn btn-primary">Revoke</button>
-    </div>
+        <button type="submit" class="btn btn-primary">Revoke</button>
+    </form>
+    <pre>{{accountInfo | json}}</pre>
 </div>
