--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
     <script src="app/editAccountInfo/editAccountInfoController.js"></script>
     <script src="app/revokeAccessToken/revokeAccessTokenController.js"></script>
     <!--Services-->
-    <script src="app/createAccount/createAccountService.js"></script>
-    <script src="app/editAccountInfo/editAccountInfoService.js"></script>
-    <script src="app/revokeAccessToken/revokeAccessTokenService.js"></script>
+    <script src="app/DataService.js"></script>
     <!--Directives-->
     <script src="app/createAccount/createAccountDirective.js"></script>
     <script src="app/editAccountInfo/editAccountInfoDirective.js"></script>
