--- a/app/editAccountInfo/editAccountInfoTemplate.html
+++ b/app/editAccountInfo/editAccountInfoTemplate.html
@@ -1,57 +1,64 @@
 <!--https://api.telegra.ph/editAccountInfo?access_token=b968da509bb76866c35425099bc0989a5ec3b32997d55286c657e6994bbb&short_name=Sandbox&author_name=Anonymous-->
-<div class="container jumbotron create-account" ng-controller="editAccountInfoController">
-    <form role="form" class="form-horizontal">
-        <fieldset>
-            <legend>Edit User</legend>
-            <div class="form-group">
-                <label for="short_name" class="col-sm-3 control-label">Username</label>
-                <div class="col-sm-9">
-                    <input
-                            ng-model="accountInfo.short_name"
-                            type="text"
-                            placeholder="Username"
-                            class="form-control"
-                            title="Required. Account name, helps users with several accounts remember which they are currently using. Displayed to the user above the Edit/Publish button on Telegra.ph, other users don't see this name."
-                            id="short_name"
-                            minlength="1"
-                            maxlength="32"
-                            required
-                            ng-disabled="!textEdit">
-                </div>
+
+<form role="form" class="form-horizontal">
+    <fieldset>
+        <legend>Edit User</legend>
+        <div class="form-group">
+            <label for="short_name" class="col-sm-3 control-label">Username</label>
+            <div class="col-sm-6">
+                <input
+                        ng-model="accountInfo.short_name"
+                        type="text"
+                        placeholder="Username"
+                        class="form-control"
+                        title="Required. Account name, helps users with several accounts remember which they are currently using. Displayed to the user above the Edit/Publish button on Telegra.ph, other users don't see this name."
+                        id="short_name"
+                        minlength="1"
+                        maxlength="32"
+                        required
+                        ng-disabled="!textEdit">
             </div>
-            <div class="form-group">
-                <label for="author_name" class="col-sm-3 control-label">Author name</label>
-                <div class="col-sm-9">
-                    <input type="text"
-                           ng-model="accountInfo.author_name"
-                           data-toggle="tooltip"
-                           data-placement="top"
-                           class="form-control col-sm-9" id="author_name"
-                           placeholder="Default author name"
-                           title="Displayed to the user above the Edit/Publish button on Telegra.ph, other users don't see this name."
-                           ng-disabled="!textEdit">
-                </div>
+        </div>
+        <div class="form-group">
+            <label for="author_name" class="col-sm-3 control-label">Author name</label>
+            <div class="col-sm-6">
+                <input type="text"
+                       ng-model="accountInfo.author_name"
+                       data-toggle="tooltip"
+                       data-placement="top"
+                       class="form-control" id="author_name"
+                       placeholder="Default author name"
+                       title="Displayed to the user above the Edit/Publish button on Telegra.ph, other users don't see this name."
+                       ng-disabled="!textEdit">
             </div>
-            <div class="form-group">
-                <label for="author_url" class="col-sm-3 control-label">Author's url (any link)</label>
-                <div class="col-sm-9">
-                    <input class="form-control col-sm-9"
-                           ng-model="accountInfo.author_url"
-                           type="text"
-                           name="author_url"
-                           placeholder="http://vk.com"
-                           title="Default profile link, opened when users click on the author's name below the title. Can be any link, not necessarily to a Telegram profile or channel."
-                           id="author_url"
-                           maxlength="512"
-                           ng-disabled="!textEdit"
-                    >
-                </div>
+        </div>
+        <div class="form-group">
+            <label for="author_url" class="col-sm-3 control-label">Author's url (any link)</label>
+            <div class="col-sm-6">
+                <input class="form-control"
+                       ng-model="accountInfo.author_url"
+                       type="text"
+                       name="author_url"
+                       placeholder="http://vk.com"
+                       title="Default profile link, opened when users click on the author's name below the title. Can be any link, not necessarily to a Telegram profile or channel."
+                       id="author_url"
+                       maxlength="512"
+                       ng-disabled="!textEdit"
+                >
             </div>
-            <div class="col-sm-offset-3 col-sm-9">
-                <button type="submit" ng-show="!textEdit" class="btn btn-primary" ng-click="textEdit = true;getAccountInfo()">Edit</button>
-                <button type="submit" ng-show="textEdit" class="btn btn-primary" ng-click="textEdit = false;editAccountInfo()">Save</button>
-            </div>
-        </fieldset>
-    </form>
-    <pre>{{accountInfo | json}}</pre>
-</div>
+        </div>
+        <div class="col-sm-offset-3 col-sm-6">
+
+            <button type="submit" ng-show="!textEdit" class="btn btn-primary"
+                    ng-click="textEdit = true;getAccountInfo()">Edit
+            </button>
+
+            <button type="submit" ng-show="textEdit" class="btn btn-primary"
+                    ng-click="textEdit = false;editAccountInfo()">Save
+            </button>
+
+            <pre>{{accountInfo | json}}</pre>
+
+        </div>
+    </fieldset>
+</form>
