--- a/app/createPage/createPageTemplate.html
+++ b/app/createPage/createPageTemplate.html
@@ -1,10 +1,7 @@
 <!--access-token required-->
 <!--https://api.telegra.ph/createPage?access_token=b968da509bb76866c35425099bc0989a5ec3b32997d55286c657e6994bbb&title=Sample+Page&author_name=Anonymous&content=[{"tag":"p","children":["Hello,+world!"]}]&return_content=true-->
-
 <form class="form-horizontal">
-
     <legend>Create new page</legend>
-
     <!--<input type="text" name="token" placeholder="token" title="Required. Access token of the Telegraph account." required>-->
     <div class="form-group">
         <label for="title" class="col-sm-3 control-label">Title</label>
@@ -26,7 +23,6 @@
             <input id="author_url" class="form-control" type="text" name="author_url" placeholder="Profile link"
                    title="Profile link, opened when users click on the author's name below the title. Can be any link, not necessarily to a Telegram profile or channel.">
         </div>
-
     </div>
     <div class="form-group">
         <label class="col-sm-3 control-label" for="content">Main content</label>
@@ -36,12 +32,15 @@
                       title="Required. Content of the page." required></textarea>
         </div>
     </div>
-    <div class="col-sm-offset-3 col-sm-6">
-        <input id="return_content" type="checkbox" title="Return content">
-        <label for="return_content">Return content</label>
+    <div class="form-group">
+        <div class="col-sm-offset-3 col-sm-6">
+            <input id="return_content" type="checkbox" title="Return content">
+            <label for="return_content">Return content</label>
+        </div>
     </div>
-    <div class="col-sm-offset-3 col-sm-6">
-        <button class="btn btn-primary">Send</button>
+    <div class="form-group">
+        <div class="col-sm-offset-3 col-sm-6">
+            <button class="btn btn-primary">Create new page</button>
+        </div>
     </div>
-
 </form>
