--- a/app/editAccountInfo/editAccountInfoTemplate.html
+++ b/app/editAccountInfo/editAccountInfoTemplate.html
@@ -47,18 +47,24 @@
                 >
             </div>
         </div>
-        <div class="col-sm-offset-3 col-sm-6">
+        <div class="form-group">
+            <div class="col-sm-offset-3 col-sm-6">
 
-            <button type="submit" ng-show="!textEdit" class="btn btn-primary"
-                    ng-click="textEdit = true;getAccountInfo()">Edit
-            </button>
+                <button type="submit" ng-show="!textEdit" class="btn btn-primary"
+                        ng-click="textEdit = true;getAccountInfo()">Edit
+                </button>
 
-            <button type="submit" ng-show="textEdit" class="btn btn-primary"
-                    ng-click="textEdit = false;editAccountInfo()">Save
-            </button>
-
-            <pre>{{accountInfo | json}}</pre>
-
+                <button type="submit" ng-show="textEdit" class="btn btn-primary"
+                        ng-click="textEdit = false;editAccountInfo()">Save
+                </button>
+            </div>
         </div>
+        <div class="form-group">
+            <div class="col-sm-offset-3 col-sm-6">
+                <pre>{{accountInfo | json}}</pre>
+            </div>
+        </div>
+
+
     </fieldset>
 </form>
