--- a/app/revokeAccessToken/revokeAccessTokenTemplate.html
+++ b/app/revokeAccessToken/revokeAccessTokenTemplate.html
@@ -12,6 +12,10 @@
         <div class="col-sm-offset-3 col-sm-6">
             <button type="submit" class="btn btn-primary">Revoke</button>
 
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="col-sm-offset-3 col-sm-6">
             <pre>{{accountInfo | json}}</pre>
         </div>
     </div>
