--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 </head>
 
-<body ng-controller="MainController">
+<body ng-controller="MainController" style="padding-bottom: 50px;">
 
 <div class="container">
     <div ng-view></div>
