getPageList directive created

--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
     <script src="app/editAccountInfo/editAccountInfoController.js"></script>
     <script src="app/revokeAccessToken/revokeAccessTokenController.js"></script>
     <script src="app/createPage/createPageController.js"></script>
+    <script src="app/getPageList/getPageListController.js"></script>
     <!--Directives-->
     <script src="app/createAccount/createAccountDirective.js"></script>
     <script src="app/editAccountInfo/editAccountInfoDirective.js"></script>
     <script src="app/revokeAccessToken/revokeAccessTokenDirective.js"></script>
     <script src="app/createPage/createPageDirective.js"></script>
+    <script src="app/getPageList/getPageListDirective.js"></script>
 
 </head>
 
@@ -46,6 +48,7 @@
             <li><a ng-click="editAccount()">Edit User Info</a></li>
             <li><a ng-click="revokeToken()">Revoke Token</a></li>
             <li><a ng-click="createNewPage()">Create Page</a></li>
+            <li><a ng-click="getListOfPages()">Get Page List</a></li>
         </ul>
     </div>
 </nav>
