--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Telegraph terminal</title>
     <!-- Latest bootstrap compiled and minified CSS -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://bootswatch.com/cosmo/bootstrap.min.css" crossorigin="anonymous">
     <!--Custom css
     <link rel="stylesheet" href="">-->
     <!--Angular-->
